syntax = "proto3";
package blogpb;
option go_package = "./blog/blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1;  // will have blog id
}

message ReadBlogRequest {
    string blog_id = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

message DeleteBlogResponse {
    string blog_id = 1;
}

message ListBlogRequest {

}
message ListBlog {
    Blog blog = 1;
}
service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog(ReadBlogRequest) returns (Blog);
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
    rpc DeleteBlog(ReadBlogRequest) returns (DeleteBlogResponse);
    rpc ListBlog(ListBlogRequest) returns (stream ListBlog);
}


